messages/Bitmask: Fix Java9+ deprecation for new Integer.