@@ -161,7 +161,7 @@ public class Bitmask extends Number implements Comparable<Bitmask> {
         }
         else if(slzType.equals("int32_t")
              || slzType.equals("uint16_t")){
-          slzNumber = new Integer((int) currentValue);
+          slzNumber = Integer.valueOf((int) currentValue);
         }else {
           slzNumber = new Long(currentValue);
         }
